Polishing code, libs and error messages

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -3,7 +3,7 @@
 MAKEFLAGS += --no-print-directory
 CONFIG += ordered
 
-SUBDIRS  = sqlite rational sha512 pcre tests
+SUBDIRS  = sqlite rational sha512 pcre cunit
 
 TOPTARGETS := all clean release debug prod production sanitize test
 
