--- a/libs/sqlite/Makefile
+++ b/libs/sqlite/Makefile
@@ -88,8 +88,11 @@ sanitize: debug
 #
 # Debug rules
 #
-debug: $(DBGSO) $(DBGSTAT)
-	@true
+debug: dbgdynlib dbgstaticlib
+
+dbgstaticlib: $(DBGSTAT)
+
+dbgdynlib: $(DBGSO)
 
 $(DBGSTAT): $(DBGOBJS)
 	@ar crs $@ $+
@@ -108,8 +111,11 @@ $(DBGDIR)/%.o: %.c $(HDRS)
 #
 # Release rules
 #
-release: $(RELSO) $(RELSTAT)
-	@true
+release: reldynlib relstaticlib
+
+relstaticlib: $(RELSTAT)
+
+reldynlib: $(RELSO)
 
 $(RELSTAT): $(RELOBJS)
 	@ar crs $@ $+
