Revert "Alpine Linux uses external libraries"
This reverts commit b4c3912baae44de6bb166d22be3851f15c8e65cd.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 doc
-libs/argp/
-libs/cosmocc/
 libs/*/debug/
 libs/*/release/
 libs/*/cunit/
+libs/*/pcre*/
+libs/argp/
+libs/cosmocc/
 src/*/
 tests/examples/huge/
 tests/unit_tests
